@@ -1,7 +1,7 @@
 name: CI Build MacOS
-on: 
+on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: ' 2 * * *'
 jobs:
   check_commit:
     uses: devonfw/ide/.github/workflows/check-commit.yml@master
@@ -22,4 +22,6 @@ jobs:
       - name: Set up Shellcheck
         run: brew install shellcheck
       - name: Build project with Maven
-        run: mvn -B -ntp install
+        run: |
+          export INTEGRATION_TEST=true
+          mvn -B -ntp install
