@@ -1,7 +1,7 @@
 name: CI Build Ubuntu
 on:
   schedule:
-   - cron: '0 0 * * *'
+   - cron: '0 3 * * *'
 jobs:
   check_commit:
     uses: devonfw/ide/.github/workflows/check-commit.yml@master
@@ -20,4 +20,6 @@ jobs:
         with:
           java-version: '11'
       - name: Build project with Maven
-        run: mvn -B -ntp install
+        run: |
+          export INTEGRATION_TEST=true
+          mvn -B -ntp install
