@@ -1,0 +1,4 @@
+#!/bin/bash
+
+source "$(dirname "${0}")"/functions
+doCommandTest terraform
